--- a/Changes
+++ b/Changes
@@ -8,7 +8,7 @@ http://code.google.com/p/www-mechanize/issues/list
 Mech now has its own mailing list at Google Groups:
 http://groups.google.com/group/www-mechanize-users
 
-NEXT
+1.56        Thu Jul  9 00:36:54 CDT 2009
 ========================================
 [THINGS THAT MAY BREAK YOUR CODE]
 For a while, Mech used HTTP::Response::Encoding to try to suss out
