--- a/Changes
+++ b/Changes
@@ -8,8 +8,11 @@ http://code.google.com/p/www-mechanize/issues/list
 Mech now has its own mailing list at Google Groups:
 http://groups.google.com/group/www-mechanize-users
 
-NEXT
+1.58        Mon Jul 13 22:32:23 CDT 2009
 ========================================
+No new features.  If you have 1.56 installed OK, you do NOT need
+to install 1.58.
+
 [FIXES]
 Removed prereq of HTTP::Response::Encoding, even though it was never
 used.  Thanks for the catch, Gisle.
