--- a/Changes
+++ b/Changes
@@ -8,6 +8,13 @@ http://code.google.com/p/www-mechanize/issues/list
 Mech now has its own mailing list at Google Groups:
 http://groups.google.com/group/www-mechanize-users
 
+1.62
+========================================
+[FIXED]
+$mech->follow_link() no longer dies with an inappropriate error if
+the link is not found.
+
+
 1.60        Mon Aug 17 00:41:39 CDT 2009
 ========================================
 No new features.  Exists only to skip tests that always fail on
