--- a/Changes
+++ b/Changes
@@ -8,6 +8,12 @@ http://code.google.com/p/www-mechanize/issues/list
 Mech now has its own mailing list at Google Groups:
 http://groups.google.com/group/www-mechanize-users
 
+NEXT
+========================================
+[FIXED]
+Fixed a declaration in the Movable Type example in
+WWW::Mechanize::Examples.
+
 1.62
 ========================================
 [FIXED]
