--- a/Changes
+++ b/Changes
@@ -11,6 +11,8 @@ http://groups.google.com/group/www-mechanize-users
 
 NEXT
 ========================================
+[DOCUMENTATION]
+Typo fixes.
 
 
 1.62        Sat Apr 10 23:10:07 CDT 2010
