--- a/lib/WWW/Mechanize/Cookbook.pod
+++ b/lib/WWW/Mechanize/Cookbook.pod
@@ -72,10 +72,15 @@ Find all links that have the word "download" in them.
 Use Abe Timmerman's L<WWW::CheckSite>
 L<http://search.cpan.org/dist/WWW-CheckSite/>
 
+=head1 SEE ALSO
+
+L<WWW::Mechanize>
+
 =head1 AUTHORS
 
-Copyright 2005 Andy Lester C<< <andy@petdance.com> >>
+Copyright 2005-2010 Andy Lester C<< <andy@petdance.com> >>
 
-Later contributions by Peter Scott, Mark Stosberg and others.
+Later contributions by Peter Scott, Mark Stosberg and others.  See
+Acknowledgements section in L<WWW::Mechanize> for more.
 
 =cut
