--- a/Changes
+++ b/Changes
@@ -25,6 +25,10 @@ parsing them.
 $mech->title now caches the title of the page after parsing the
 page to find it.
 
+mech-dump now takes a --cookie-file parameter for keeping cookies
+between calls.
+
+
 [DOCUMENTATION]
 Typo fixes.
 
