--- a/Changes
+++ b/Changes
@@ -9,7 +9,7 @@ Mech now has its own mailing list at Google Groups:
 http://groups.google.com/group/www-mechanize-users
 
 
-NEXT
+1.64        Thu Jul  1 10:41:00 CDT 2010
 ========================================
 [THINGS THAT MAY BREAK YOUR CODE]
 If you've been accessing $mech->{forms} or $mech->{form} values
