--- a/Changes
+++ b/Changes
@@ -9,6 +9,12 @@ Mech now has its own mailing list at Google Groups:
 http://groups.google.com/group/www-mechanize-users
 
 
+NEXT
+========================================
+[FIXED]
+Fixed prerequisites on HTTP::Server::Simple on Windows.
+
+
 1.64        Thu Jul  1 10:41:00 CDT 2010
 ========================================
 [THINGS THAT MAY BREAK YOUR CODE]
