--- a/Changes
+++ b/Changes
@@ -9,7 +9,7 @@ Mech now has its own mailing list at Google Groups:
 http://groups.google.com/group/www-mechanize-users
 
 
-NEXT
+1.66        Fri Sep 10 16:25:44 CDT 2010
 ========================================
 [FIXED]
 Fixed prerequisites on HTTP::Server::Simple on Windows.
@@ -20,7 +20,8 @@ Schwern.
 [ENHANCEMENTS]
 New $mech->text method returns the text from your HTML page.  The
 exact rendering of this text is simply removing all the HTML
-tags, but this will change. It's pretty ugly.
+tags, but this will change. It's pretty ugly.  If anyone wants to
+work on a better-looking text dump, I'd love to see it.
 
 Added mech-dump --text.
 
