Checking in changes prior to tagging of version 1.68.
Changelog diff is:

diff --git a/Changes b/Changes
index 8f86817..4127412 100644
--- a/Changes
+++ b/Changes
@@ -3,6 +3,10 @@ Revision history for WWW::Mechanize
 Mech now has its own mailing list at Google Groups:
 http://groups.google.com/group/www-mechanize-users

+1.68        Fri Apr 22 01:10:40 EST 2011
+========================================
+No changes from 1.67_01
+
 1.67_01
 ========================================
 [ANNOUNCE]

--- a/Changes
+++ b/Changes
@@ -3,6 +3,10 @@ Revision history for WWW::Mechanize
 Mech now has its own mailing list at Google Groups:
 http://groups.google.com/group/www-mechanize-users
 
+1.68        Fri Apr 22 01:10:40 EST 2011
+========================================
+No changes from 1.67_01
+
 1.67_01
 ========================================
 [ANNOUNCE]
