improve docs about support of JavaScript

--- a/lib/WWW/Mechanize/FAQ.pod
+++ b/lib/WWW/Mechanize/FAQ.pod
@@ -28,48 +28,9 @@ It does pretty much, but it doesn't support JavaScript.
 
 I added some basic attempts at picking up URLs in C<window.open()>
 calls and return them in C<< $mech->links >>.  They work sometimes.
-Beyond that, there's no support for JavaScript.
-
-=head2 Are you going to add JavaScript support?
-
-I will if anyone sends me the code to do it.  I'm not going to write a
-JavaScript processor myself.
-
-=head2 Wouldn't that be a great thing to have in WWW::Mechanize?
-
-Yes.
-
-=head2 Would it be hard to do?
-
-Hard enough that I don't want to deal with it myself.  Plus, I don't
-use JavaScript myself, so I don't have an itch to scratch.
-
-=head2 Is anyone working on it?
-
-I've heard noises from people every so often over the past couple of
-years, but nothing you'd pin your hopes on.
-
-=head2 It would really help me with a project I'm working on.
-
-I'm sure it would.
-
-=head2 Do you know when it might get added?
-
-I have no idea if or when such a thing will ever get done.  I can
-guarantee that as soon as there's anything close to JavaScript support
-I will let everyone know.
-
-=head2 Maybe I'll ask around and see if anyone else knows of a solution.
-
-If you must, but I doubt that anyone's written JavaScript support for
-Mechanize and neglected to tell me about it.
-
-=head2 So what can I do?
 
 Since Javascript is completely visible to the client, it cannot be used
-to prevent a scraper from following links. But it can make life difficult,
-and until someone writes a Javascript interpreter for Perl or a Mechanize
-clone to control Firefox, there will be no general solution.  But if
+to prevent a scraper from following links. But it can make life difficult. If
 you want to scrape specific pages, then a solution is always possible.
 
 One typical use of Javascript is to perform argument checking before
@@ -88,8 +49,8 @@ before and after URLs and save them to files. Edit each file, converting
 the the argument separators ('?', '&' or ';') into newlines. Now it is
 easy to use diff or comm to find out what Javascript did to the URL.
 Step 2 - find the function call which created the URL - you will need
-to parse and interpret its argument list. Using the Javascript Debugger
-Extension for Firefox may help with the analysis. At this point, it is
+to parse and interpret its argument list. The Javascript Debugger in the
+Firebug extension for Firefox helps with the analysis. At this point, it is
 fairly trivial to write your own function which emulates the Javascript
 for the pages you want to process.
 
@@ -117,6 +78,11 @@ arguments, Cookies, User-Agents, Accepts, etc. If you are using mech,
 then redirects and cookies should not be a problem, but are listed here
 for completeness. If you are missing headers, C<< $mech->add_header >>
 can be used to add the headers that you need.
+
+=head2 Which modules work like Mechanize and have JavaScript support?
+
+In no particular order: L<Gtk2::WebKit::Mechanize>, L<Win32::IE::Mechanize>,
+L<WWW::Mechanize::Firefox>, L<WWW::Scripter>
 
 =head1 How do I do X?
 
