Added form_action($action) to look up forms by regex containing $action
- Added form_action($action) to look up forms by a regex containing $action.
- Modified t/local/log-server so we could test finding 1 form and finding
  many forms using form_action($action). Also bumped version to 0.56.
- Added form_action($action) tests to t/local/form.t. Also modified the
  test outputs to clearly identify which form_*() is under test (and cleaned
  up some test outputs capitalization).

This commit was originally submitted by Mark Leighton Fisher on 28 Oct
2013 in GH #19, and rebased and integrated into the modern codebase by
Julien Fiegehenn.

--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for WWW::Mechanize
 
 {{$NEXT}}
 
+    [ENHANCEMENTS]
+    - Added form_action($action) to look up forms by regex matching $action (GH#19)
+      (Mark Leighton Fisher and Julien Fiegehenn)
+
     [DOCUMENTATION]
     - Explain that file URIs need url encoding (GH#329) (Julien Fiegehenn and
       積丹尼 Dan Jacobson)
