--- a/Changes
+++ b/Changes
@@ -4,6 +4,12 @@ Mech now has its own mailing list at Google Groups:
 http://groups.google.com/group/www-mechanize-users
 
 
+1.80        Mon Oct 28 08:21:17 EDT 2013
+========================================
+[ENHANCEMENTS]
+- Added form_action($action) to look up forms by regex matching $action.
+
+
 1.73        2013-08-24
 ========================================
 [TESTS]
