--- a/Changes
+++ b/Changes
@@ -3,6 +3,13 @@ Revision history for WWW::Mechanize
 Mech now has its own mailing list at Google Groups:
 http://groups.google.com/group/www-mechanize-users
 
+1.75
+========================================
+[OTHER CHANGES]
+
+- WWW::Mechanize::Image and WWW::Mechanize::Link now have a defined $VERSION
+
+
 1.74        2015-01-23
 ========================================
 [OTHER CHANGES]
