Changes entry for encoding pragma fix

--- a/Changes
+++ b/Changes
@@ -8,6 +8,7 @@ http://groups.google.com/group/www-mechanize-users
 [OTHER CHANGES]
 
 - WWW::Mechanize::Image and WWW::Mechanize::Link now have a defined $VERSION
+- fixed warning about the use of the encoding pragma (new in 5.22) (RT#91971)
 
 
 1.74        2015-01-23
