--- a/Changes
+++ b/Changes
@@ -4,6 +4,9 @@ Mech now has its own mailing list at Google Groups:
 http://groups.google.com/group/www-mechanize-users
 
 {{$NEXT}}
+========================================
+[TESTS]
+- Skip Wikipedia tests if LWP::Protocol::https is not installed.
 
 1.76      2016-07-29 12:17:25-04:00 America/Toronto (TRIAL RELEASE)
 ========================================
