--- a/Changes
+++ b/Changes
@@ -4,6 +4,10 @@ Mech now has its own mailing list at Google Groups:
 http://groups.google.com/group/www-mechanize-users
 
 {{$NEXT}}
+========================================
+[FIXED]
+- Fixes behaviour of submit_form() when multiple filters have been supplied (Ed
+  Avis)
 
 1.79      2016-09-16 23:53:48-04:00 America/Toronto
 ========================================
