--- a/Changes
+++ b/Changes
@@ -4,6 +4,10 @@ Mech now has its own mailing list at Google Groups:
 http://groups.google.com/group/www-mechanize-users
 
 {{$NEXT}}
+========================================
+[FIXED]
+-  Work around bug in HTTP::Cookies that is triggered on reload().  See
+   https://rt.cpan.org/Public/Bug/Display.html?id=75897 (Gianni Ceccarelli)
 
 1.80      2016-09-24 22:38:27-04:00 America/Toronto
 ========================================
