--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@ Mech now has its own mailing list at Google Groups:
 http://groups.google.com/group/www-mechanize-users
 
 {{$NEXT}}
+[ENHANCEMENTS]
+- Added strict_forms flag to submit_form() which sets the HTML::Form strict flag (Gareth Tunley)
 
 1.81      2016-10-06 08:52:44-04:00 America/Toronto
 ========================================
