--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@ Mech now has its own mailing list at Google Groups:
 http://groups.google.com/group/www-mechanize-users
 
 {{$NEXT}}
+[FIXED]
+- Set STDOUT to be utf8 in mech-dump. Fixes issue GH#36
 
 1.82      2016-10-06 23:00:30-04:00 America/Toronto
 [ENHANCEMENTS]
