--- a/Changes
+++ b/Changes
@@ -8,6 +8,7 @@ http://groups.google.com/group/www-mechanize-users
 - Set STDOUT to be utf8 in mech-dump. Fixes issue GH#36
 - Added --version option to mech-dump
 - Don't die on uri() when there has been no request. Fixes issue GH#60
+- Remove old information from the cookbook. Fixes issue GH#28
 
 1.83      2016-10-14 16:45:30-04:00 America/Toronto
 ========================================
