--- a/Changes
+++ b/Changes
@@ -1,12 +1,17 @@
 Revision history for WWW::Mechanize
 
 {{$NEXT}}
+[ENHANCEMENTS]
+- Parse url (href attribute) for js window.open  GH#11
+
 [FIXED]
 - Set STDOUT to be utf8 in mech-dump. Fixes issue GH#36
 - Added --version option to mech-dump
 - Don't die on uri() when there has been no request. Fixes issue GH#60
 - Remove old information from the cookbook. Fixes issue GH#28
-- Documentation correction. Fixes issue GH#65
+- Documentation correction. Fixes issue GH#65 and GH#59
+- Work around Test::More prior to 1.001004. Fixes GH#74
+- Fix hostname in test.  Fixes GH#73
 
 1.83      2016-10-14 16:45:30-04:00 America/Toronto
 ========================================
