--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for WWW::Mechanize
 
 {{$NEXT}}
+    [FIXED]
+    - use 127.0.0.1 instead of 'localhost' in a test to avoid the test hanging
+      due to ipv6 issues (GH#31)
 
 1.84      2017-03-07 13:34:57-05:00 America/Toronto
 [ENHANCEMENTS]
