--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for WWW::Mechanize
 
+{{$NEXT}}
+
 1.87      2018-02-07 22:04:16Z
 ========================================
     [FIXED]
