increment $VERSION after 1.88 release

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for WWW::Mechanize
 
+{{$NEXT}}
+
 1.88      2018-03-23 15:37:25Z
 ========================================
     [FIXED]
