--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for WWW::Mechanize
 
+{{$NEXT}}
+
 1.92      2019-08-24 01:00:35Z
     [FIXED]
     - Test requires HTTP::Daemon 6.05+ and uses 127.0.0.1 or [::1] according to
