increment $VERSION after 1.94 release

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for WWW::Mechanize
 
+{{$NEXT}}
+
 1.94      2019-10-10 13:12:28Z
     [FIXED]
     - Issue #182: Don't autocheck for mech-dump so basic auth works (GH#285)
